<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_solo"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_solo"/>

    <item
        android:id="@+id/navigation_leagues"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_leagues"/>

    <item
        android:id="@+id/navigation_newsfeed"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_newsfeed"/>

    <item
        android:id="@+id/navigation_friends"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/title_friends"/>

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_build_black_24dp"
        android:title="@string/title_settings"/>

</menu>
